# thermal-2022-08-18

./: .bashrc  .copier-answers.yml  .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .tcshrc  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  README.md  cshrc  docker-compose.yml  docker-setup.ps1  gunns-sims.code-workspace  new_sim.tcsh  pyproject.toml  pyrightconfig.json  requirements.txt  root.code-workspace  setup.ps1  setup.sh  setup.tcsh  update.ps1
BasicThermal/: .gitignore  BasicThermal.cpp  BasicThermal.hh  BasicThermal.xml  BasicThermal.xml.bak  BasicThermal2.xml  TestBasicNetwork.cpp  TestBasicNetwork.hh
SIM_class_test_compile/: test_class.sh
SIM_default/: S_define
SIM_default/RUN_default/: tv.tv
SIM_thermal/: S_define  S_gunnsdraw_buildtime.mk  S_overrides.mk  Sim.sm  TV_potential.tv  _init_log.csv
SIM_thermal/RUN_test/: .gitignore  _init_log.csv  input.py  my_results.dr  nodes.dr
S_modules/: MySim.sm
docker/: Dockerfile  volume-setup-in-container.sh  volume-setup.ps1
network_inputs/: post.py
root/: .bashrc
sims/: copy_sim.sh  copy_sim.tcsh  new_sim.sh
sims/SIM_default/: Sim.sm
sims/SIM_default/RUN_default/: input.py
sims/SIM_example/: Sim.sm
sims/SIM_example/RUN_default/: dr.dr
sims/SIM_example/network/: Network.xml
sims/SIM_post/: Sim.sm
sims/SIM_post/RUN_default/: DP_nodes.xml  dr.dr  input.py  (+1 more)
sims/SIM_simple/: Sim.sm
src/gunns_sims/: __init__.py  api.py  classes.py  common.py  contextdict.py  networks.py
tests/: test_gunns-sims.py  test_gunns_sims.py  test_networks.py
thermal/: thermal.drawio
(+4 files in other folders)
