[build-system]
requires = [ "flit_core >=3.3,<4",]
build-backend = "flit_core.buildapi"

[project]
name = "gunns-sims"
requires-python = ">=3.10"
dependencies = [ "", "typing_extensions~=4.3.0", "", "matplotlib~=3.5.3", "pandas-stubs~=1.4.3.220822", "pandas~=1.4.3", "pandera~=0.12.0", "pint~=0.19.2", "pyarrow~=9.0.0", "pydantic~=1.9.2", "pyyaml~=6.0", "rich~=12.5.1", "scipy~=1.9.0", "typer[all]~=0.6.1",]
readme = "README.md"
dynamic = [ "version", "description",]
[[project.authors]]
name = "Blake Naccarato"
email = "blake.naccarato+gunns-sims@gmail.com"

[project.urls]
Home = "https://github.com/blakeNaccarato/gunns-sims"

[project.optional-dependencies]
