[build-system]
requires = [ "flit_core >=3.3,<4",]
build-backend = "flit_core.buildapi"

[project]
name = "gunns_sims"
requires-python = ">=3.10"
dependencies = [ "datadict~=1.0.0",]
readme = "README.md"
dynamic = [ "version", "description",]
[[project.authors]]
name = "Blake Naccarato"
email = "blake.naccarato+gunns_sims@gmail.com"

[project.urls]
Home = "https://github.com/blakeNaccarato/gunns-sims"

[project.optional-dependencies]
